--- a/UIElementManager/src/main/AndroidManifest.xml
+++ b/UIElementManager/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
 
     <application>
-        <service 
-            android:name=".service.UIElementTrackingService"
+        <service
+            android:name=".presentation.service.UIElementTrackingService"
             android:exported="false"
-            android:stopWithTask="true"
-            android:foregroundServiceType="dataSync" />
+            android:foregroundServiceType="mediaProjection"
+            android:stopWithTask="true" />
     </application>
 </manifest>
